--- a/Transformers/Adversarial_Training_latest.ipynb
+++ b/Transformers/Adversarial_Training_latest.ipynb
@@ -276,39 +276,38 @@
         "  # Sparse categorical crossentropy \n",
         "  # loss function used for generator pretraining\n",
         "  '''\n",
-        "  loss_object = tf.keras.losses.SparseCategoricalCrossentropy(\n",
-        "    from_logits=True, reduction='none')\n",
-        "  \n",
+        "  loss_object = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True,\n",
+        "                                                              reduction='none')\n",
         "  mask = tf.math.logical_not(tf.math.equal(real, 0))\n",
         "  loss_ = loss_object(real, pred)\n",
         "\n",
         "  mask = tf.cast(mask, dtype=loss_.dtype)\n",
         "  loss_ *= mask\n",
-        "  \n",
+        "\n",
         "  return tf.reduce_sum(loss_)/tf.reduce_sum(mask)\n",
         "\n",
+        "\n",
+        "\n",
         "def pretrain_step(inp, tar):\n",
-        "  '''\n",
-        "  # Pretraining step for generator network\n",
-        "  '''\n",
-        "  tar_inp = tar[:, :-1]\n",
-        "  tar_real = tar[:, 1:]\n",
+        "    '''\n",
+        "    # Pretraining step for generator network\n",
+        "    '''\n",
+        "    tar_inp = tar[:, :-1]\n",
+        "    tar_real = tar[:, 1:]\n",
         "  \n",
-        "  enc_padding_mask, combined_mask, dec_padding_mask = create_masks(inp, tar_inp)\n",
+        "    enc_padding_mask, combined_mask, dec_padding_mask = create_masks(inp, tar_inp)\n",
         "  \n",
-        "  with tf.GradientTape() as tape:\n",
-        "    predictions, _ = generator(inp, tar_inp, \n",
-        "                                 True, \n",
-        "                                 enc_padding_mask, \n",
-        "                                 combined_mask, \n",
-        "                                 dec_padding_mask)\n",
-        "    print(predictions.shape)\n",
-        "    print(tar_real.shape)\n",
-        "    loss = pretrain_loss_function(tar_real, predictions)\n",
+        "    with tf.GradientTape() as tape:\n",
+        "\n",
+        "        predictions, _ = generator(inp, tar_inp, \n",
+        "                                   True, \n",
+        "                                   enc_padding_mask, \n",
+        "                                   combined_mask, \n",
+        "                                   dec_padding_mask)\n",
+        "        loss = pretrain_loss_function(tar_real, predictions)\n",
         "\n",
         "  gradients = tape.gradient(loss, generator.trainable_variables)    \n",
         "  generator_optimizer.apply_gradients(zip(gradients, generator.trainable_variables))\n",
-        "  \n",
         "  train_loss(loss)\n",
         "  train_accuracy(tar_real, predictions)"
       ],
