--- a/Transformers/Adversarial_Training_latest.ipynb
+++ b/Transformers/Adversarial_Training_latest.ipynb
@@ -188,7 +188,7 @@
         "id": "wsINyf1VEQLC"
       },
       "source": [
-        "## Set hyperparameters"
+        "## Set hyperparameters and training variables"
       ]
     },
     {
@@ -247,6 +247,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "91FoikiR9GOP",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Define generator "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ZxEs9TvYov9S",
@@ -262,6 +272,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nWgK4OMu9UH4",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Define pre-training functions "
+      ]
     },
     {
       "cell_type": "code",
@@ -376,7 +396,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Load in weights from pre-training"
+        "## Load in weights from earlier pre-training (Each model trained for 10 epochs)"
       ]
     },
     {
@@ -434,7 +454,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Define training step"
+        "## Define adversarial training step"
       ]
     },
     {
